# pwgraph

./: README.md  ch.verbuecheln.pwgraph.json  com.verbuech.pwcheck-gtk.json  meson.build
data/: ch.verbuecheln.pwgraph.appdata.xml.in  ch.verbuecheln.pwgraph.desktop.in  ch.verbuecheln.pwgraph.gschema.xml  com.verbuech.pwcheck-gtk.appdata.xml.in  com.verbuech.pwcheck-gtk.desktop.in  com.verbuech.pwcheck-gtk.gschema.xml  meson.build
po/: POTFILES  de.po  meson.build  pwgraph.pot
src/: dictionary.c  dictionary.h  dictionary.txt  graph.c  graph.h  keyboard.c  keyboard.h  main.c  meson.build  patterns.c  patterns.h  pwcheck_gtk-window.c  pwcheck_gtk-window.h  pwcheck_gtk-window.ui  pwcheck_gtk.gresource.xml  pwgraph-window.c  pwgraph-window.h  pwgraph-window.ui  pwgraph.gresource.xml  sequence.c  sequence.h  utils.c  utils.h  word.c  word.h
